<resources>
    <string name="app_name">Shuf Dominion</string>
    <string name="action_help">Ayuda</string>
    <string name="action_about">Nosotros</string>
    <string name="title_activity_principal">Random Dominion</string>
    <string name="title_activity_list">Lista de cartas</string>
    <string name="button_allList">Mostrar todas las cartas</string>
    <string name="button_tagList">Mostrar las cartas por categorias</string>
    <string name="button_randomList">Mostrar las cartas para jugar</string>
    <string name="error_expansion">ERROR: No has puesto ninguna Expansión</string>

    //TABS Bottom home
    <string name="title_tab_all">Cards</string>
    <string name="title_tab_cat">Category</string>
    <string name="title_tab_play">Playing</string>

    //TABS Bottom home
    <string name="title_toolbar_all">All Cards</string>
    <string name="title_toolbar_cat">Category Cards</string>
    <string name="title_toolbar_play">Playing Cards</string>

    //settings
    <string name="action_settings">Configuración</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="desc_num_cards">Aquí pondremos el numero de cartas que queremos que nos muertre el random</string>
    <string name="dialog_num_cards">Indicar numero de Cartas</string>
    <string name="title_num_cards">Numero de cartas</string>

    //Headers
    <string name="header_general">General</string>
    <string name="header_advanced">Advanzado</string>
    <string name="search">Buscar</string>

    //Dialog
    <string name="yes">Si</string>
    <string name="desc_scroll">Descripción</string>
    <string name="title_dialog">Cerrar la aplicación</string>
    <string name="no">No</string>
    <string name="desc_dialog">¿Estas seguro de que deseas cerrar la aplicación?</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_switch">Canviar vista</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
